src/test/deca/syntax/valid/parser/ifelse.deca
//Programme valide testant if.

{
    if(true){
        println("ok");
    }
    else{
        println("erreur");
    }
}