src/test/deca/syntax/invalid/parser/if-then.deca
// Invalid if then test

// Invalid if test

{
    if (true {}

}